--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5931701779:AAHrcZdkQvawZYW3G6vX-n6gKFQyiQDu4RY"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+OWNER_ID = 639521576
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = 120  #minimum recommended 120
 IS_TEAM_DRIVE = "True"
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = 27686030
+TELEGRAM_HASH = "486e18582e097bbc7eee3c59204781c4"
 
 # OPTIONAL CONFIG
 DATABASE_URL = ""
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = "https://t.me/Web_X_Bots"
 FSUB_CHANNEL_ID = -1001860403687
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://dasdsadsadddvvv.onrender.com/"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
